[package]
name = "n_test"
version = "0.1.0"
authors = ["boris"]

[dependencies]
rand = "0.6"
ndarray = "0.12"
# ndarray-linalg = { version = "0.10", features=["intel-mkl"] }
ndarray-linalg = { version = "0.10" }
# blas-src = { version = "0.2", default-features=false, features = ["accelerate"] }
# openblas-src = { version = "0.7", default-features=false, features = ['static'] }
intel-mkl-src = "0.4"
