[package]
name = "dylib_linking_test"
version = "0.1.0"
authors = ["boris"]

[dependencies]
rand = "0.6"
ndarray = "0.12"
ndarray-linalg = { version = "0.10" }
# ndarray-linalg = { version = "0.10", features=["openblas"] }
openblas-src = { version = "0.7", features=["cblas"]}
# accelerate-src = { version = "0.3"}
# blas-src = { version = "0.2", features = ["system"]}
